wiki/src/install/inc/stylesheets/steps.css
span.title {
  display: block;
  font-weight: 100;
  padding-top: 100px;
  color: black;
  font-size: 36px;
  text-align: center;
  border-left: none;
}

.sidebar {
  display: none;
}

#content {
  padding-left: 250px;
}

p.start {
  min-height: 200px;
}

pre, p.pre {
  width: 48em;
  max-width: 48em;
}

.step-image {
  position: absolute;
  left: 2.5em;
  height: 200px;
  width: 200px;
}

.step-image img {
  position: relative;
}

.state-image {
  text-align: center;
  margin-bottom: 1em;
}

body {
  counter-reset: step;
}


h1:before {
  position: relative;
  left: -2.5em;
  font-size: 0.75em;
  counter-increment: step;
  margin-right: -2em;
  display: inline;
}

/* Thiner border */

.step-image img {
  outline: 3px solid white;
  outline-offset: -4px;
  position: relative;
}

/* Scaling images */

img.screenshot {
  height: 70%;
  transition-duration: 0.3s;
  width: 70%;
}

img.screenshot:hover {
  height: 100%;
  opacity: 1;
  width: 100%;
}

/* Give some room to the title and the sections */

h1 {
  color: #56347C;
  font-weight: 400;
  margin-left: -150px;
  margin-top: 50px;
}

/* Trophy is a trophy */

div.trophy {
  border: 5px solid #56347C;
  font-size: 17px;
  margin-top: 30px;
  padding-top: 20px;
  padding-bottom: 0px;
  padding-right: 20px;
  position: relative;
  background-color: white;
}

div.trophy p {
  color: black;
  font-family: "Source Sans Pro Regular", "DejaVu Sans", "Verdana", "sans-serif";
  font-weight: 200;
}

.trophy img {
  margin: 10px;
}

/* more room for the state */
.state-image {
  margin-top: 0px;
}

p {
  color: black;
}

h2 {
  font-size: 1.5em;
  line-height: 2em;
}

h3 {
  font-size: 15px;
}

#recommendations {
  padding: 20px;
}

#recommendations p:first-child {
  padding-left: 66px;
}

#recommendations h3, #recommendations p:first-child, #recommendations p:last-child {
  text-align: center;
}

#recommendations .row p {
  background: #56347C;
  color: white;
  padding: 10px;
  padding-left: 66px;
}

#recommendations .row p a {
  color: white;
  text-decoration: underline;
}

#recommendations img {
  float: left;
}

div.toggleable .hide {
  display: block !important;
}

/*==========  Non-Mobile First Method  ==========*/

/* Large Devices, Wide Screens */
@media only screen and (max-width : 1200px) {

}

/* Medium Devices, Desktops */
@media only screen and (max-width : 992px) {

}

/* Small Devices, Tablets */
@media only screen and (max-width : 768px) {

  #content {
    padding-left: 10px;
  }

  .step-image {
    position: relative;
    height: 200px;
    width: 200px;
    margin: 2em 0;
  }

  h1 {
    font-size: 25px;
    margin-left: 30px;
  }

  /* Scaling images */

  img.screenshot {
    height: 100%;
    width: 100%;
  }

  div.trophy {
    background-position: center 0.5em;
    padding: 60px 1em 1em;
  }

  #recommendations h3 {
    font-size: 20px;
  }

}

/* Extra Small Devices, Phones */
@media only screen and (max-width : 480px) {

}

/* Custom, iPhone Retina */
@media only screen and (max-width : 320px) {

}

/* QR code on the side */

img.qrcode {
  float: right;
  margin-top: -1em;
}


@media print {
  /* from http://www.alsacreations.com/astuce/lire/1160-une-feuille-de-styles-de-base-pour-le-media-print.html */

  body {
    width: auto !important;
    margin: auto !important;
    font-size: 12pt;
    background-color: #fff !important;
    color: #000 !important;
  }

  p, h1, h2, h3, h4, h5, h6, blockquote, ul, ol {
    color: #000 !important;
  }

  .print {
    display: block;
  }

  a {
    color: #000 !important;
  }

/* Tails specifics */

  #content {
    padding-left: 0px;
  }

  .step-image {
    position: relative;
    height: 200px;
    width: 200px;
    margin: 2em 0;
  }

  h1 {
    font-size: 25px;
    margin-left: 50px !important;
  }

  /* Scaling images */

  img.screenshot {
    height: 70%;
    width: 70%;
  }

  img {
    page-break-before: auto; /* 'always,' 'avoid,' 'left,' 'inherit,' or 'right' */
    page-break-after: auto; /* 'always,' 'avoid,' 'left,' 'inherit,' or 'right' */
    page-break-inside: avoid; /* or 'auto' */
}

  .toggleable {
    display: block !important;
  }

  .toggleable {
    position: relative !important;
    width: 90% !important;
    margin: 50px !important;
    padding: 20px !important;
    border: 3px dashed  darkgrey !important;
    font-size: 0.9em;
  }

}

